Schedule repaint of location bar when its background is modified.

This issue was most noticeable when quickly alt-tabbing away and back to chrome, or blurring and re-focusing the omnibox. The omnibox schedules a repaint for the location bar when it blurs, but not when it focuses. This caused the region of the location bar that is not overlapped by the omnibox to be stale when the omnibox gains focus quickly after losing focus; the omnibox would be painted with its focus-color (white) while the location bar would retain its blur-color (light gray). This was not an issue prior to material refresh because the omnibox and location bar did not change color on focus and blur.

Bug: 853370
Change-Id: I7c6035a09e76cf9fff019234e769ffc312b0a9bd
Reviewed-on: https://chromium-review.googlesource.com/1112494
Commit-Queue: manuk hovanesian <manukh@chromium.org>
Reviewed-by: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570119}