chrome/browser/ui/views/location_bar/location_bar_view.cc
@@ -812,6 +812,8 @@ void LocationBarView::RefreshBackground() {
   // correctly enable subpixel AA.
   omnibox_view_->SetBackgroundColor(background_color);
   omnibox_view_->EmphasizeURLComponents();
+
+  SchedulePaint();
 }
 
 void LocationBarView::RefreshLocationIcon() {
@@ -1266,7 +1268,6 @@ void LocationBarView::OnOmniboxBlurred() {
 
 void LocationBarView::OnOmniboxHoverChanged() {
   RefreshBackground();
-  SchedulePaint();
 }
 
 ////////////////////////////////////////////////////////////////////////////////
